--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-US">
 	<head>
 		<title>Victor Guo</title>
+		<style>
+		body {background-color: lightgrey;}
+		h1	{color:blue;}
+		
+		</style>
 	</head>
 	<body>
 		<h1>Hello World!</h1>
-		<p>This is my personal website</p>
+		<p title="About Me">
+		This is my personal website
+		</p>
+		<img src="file:///C:/Users/VG8/Pictures/Pictures/city.jpg" alt="City View" style="width:384px;height:216px;">
 	</body>
 </html>
