--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 		<p title="About Me">
 		This is my personal website
 		</p>
-		<img src="file:///C:/Users/VG8/Pictures/Pictures/city.jpg" alt="City View" style="width:384px;height:216px;">
+		<img src="city.jpg" alt="City View" style="width:768px;height:432px;">
 	</body>
 </html>
