--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		h1	{color:blue;}
 		
 		</style>
+		<link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<h1>Hello World!</h1>
