--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		h1	{color:blue;}
 		
 		</style>
-		<link rel="shortcut icon" href="http://victorguo.ca/favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<h1>Hello World!</h1>
