--- a/About Me.html
+++ b/About Me.html
@@ -11,17 +11,11 @@
 	</head>
 	<body>
 		<h1>Victor Guo</h1>
-		<a href="https://github.com/Victor-Guo">My Github</a>
-		
-		<p>
-		This is my <strong>personal</strong> website. <br /> This is <em> awesome </em>.
-		</p>
-		
 		<hr />
+		<h2>About Me</h2>
 		
-		<a href="About Me.html"><h2>About Me</h2></a>
 		
 		
-		<img src="city.jpg" alt="City View" style="width:768px;height:432px;">
+		
 	</body>
 </html>
