--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	</head>
 	<body>
 		<h1>Victor Guo</h1>
-		<a href="https://github.com/Victor-Guo">My Github</a>
+		<a href="https://github.com/Victor-Guo" title="My Github">Github</a>
 		
 		<p>
 		This is my <strong>personal</strong> website. <br /> This is <em> awesome </em>.
@@ -22,6 +22,28 @@
 		<a href="About Me.html"><h2>About Me</h2></a>
 		
 		
-		<img src="city.jpg" alt="City View" style="width:768px;height:432px;">
+		<a title="Sick View of the City"><img src="city.jpg" alt="City View" style="width:768px;height:432px;"/></a>
+		<!-- to add a border to the table do: border="1"
+		<table border="1">
+			<tr>
+				<th colspan="2"><h3>Nub</h3></th>
+				<th>Nub</th>
+			</tr>
+			<tr>
+				<th>Gods</th>
+				<th>Demigods</th>
+				<th>Noobs</th>
+			</tr>
+			<tr>
+				<td>Pro</td>
+				<td>nublet</td>
+				<td>Pros</td>
+			</tr>
+		</table>
+		
+		<ul>
+			<li>New sunglasses</li>
+			<li>Computer</li>
+		</ul>-->
 	</body>
 </html>
